# market_place

./: Dockerfile  entrypoint.sh  pyproject.toml
market/: forms.py  views.py  views_auth.py
market/static/css/: bootstrap-grid.css.map  bootstrap-grid.rtl.css.map  bootstrap-grid.rtl.min.css  style.css
market/templates/: account.html  base.html  category_list.html  edit_category.html  login.html  main_page.html  no-authorized-page.html  product_detail.html  search_results.html  upload_product.html
shop/: settings.py  urls.py  wsgi.py
static/css/: bootstrap-grid.min.css
